--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE>
-<html>
+<html ng-app>
 <head>
   <title> Lista contatos </title>
 </head>
 <body>
   <h1>lista de contatos</h1>
+  <input ng-model="test">
+    <h1>Hello {{test}}!</h1>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
 </body>
 
 </html>
