--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE>
 <html ng-app>
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <title> Lista contatos </title>
 </head>
 <body>
+  <div class="container">
   <h1>lista de contatos</h1>
+  <table class="table"  >
+<thread>
+<tr>
+  <th>Nome </th>
+
+  <th>Email</th>
+  <th>Telefone</th>
+</tr>
+</thead>
+<tbody>
+      <tr>
+        <td>test</td>
+        <td>test</td>
+        <td>test@somemail.com</td>
+      </tr>
+    </tbody>
+
   <input ng-model="test">
-    <h1>Hello {{test}}!</h1>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+
 </body>
 
 </html>
